adds successful integration spec

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,8 +10,8 @@
 
 <p>Create new task:</p>
 
-<form action="/list" method="post">
+<form action="/tasks" method="post">
   <label for="description">Task Description</label>
   <input id="description" name="description" type="text">
-  <buttontype="submit">Add task</button>
+  <button type="submit">Add task</button>
 </form>
